2006-06-12  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/gnomevfs-file.c (GnomeVFS::File): Use rb_io_printf, rb_io_puts, rb_io_print
	and rb_io_addstr to implement corresponding methods.

2006-06-11  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/gnomevfs-file.c (GnomeVFS::File): Allow optional "buffer" argument like
	IO#raed. And fix to read to the end of file when length is ommited, even if
	gnome_vfs_get_file_info_from_handle() and/or gnome_vfs_tell() don't work.

2005-10-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Cygwin support. [bug #1315334]
	By Yaakov Selkowitz.

2005-10-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb, src/gnomevfs.c, src/gnomevfs.h:
	Added GnomeVFS::BUILD_VERSION.

2005-09-18  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/gnomevfs-file.c: If Gnome::VFS.open with write mode can't find
	file, then it creates new file. [Bug #1264492]

2005-07-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb, src/gnomevfs-file.c: Fix for Ruby-1.9.x. 

2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb changes. 
	* src/gnomevfs.h: Fix NUM2ULL duplication for Ruby-1.9.x.

2004-09-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/gnomevfs.rb:  Support GLib::Log.set_log_domain.
	Define GnomeVFS::LOG_DOMAIN.

2004-08-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/gnomevfs-result.c: Improve error handling. 

2004-05-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* tests/*.rb: Improve to work anywhere on UNIX environment.

2004-05-30  Giovanni Corriga <valkadesh@libero.it>

	* src/gnomevfs.c: Fix a wrong definitions

2004-05-30  Pascal Terjan <pterjan@linuxfr.org>

	* src/gnomevfs.h: Add "extern" definition to the Global variables.

2004-03-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* REAMDE, src/gnomevfs-fileinfo.c src/gnomevfs-result.c src/gnomevfs.h:
	Update Copyright.

2004-03-04  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/gnomevfs.h, gnomevfs-result.c, gnomevfs-fileinfo.c: 